# universal-agent

./: .gitignore  LICENSE  pyproject.toml
docs/: development_notes.md  diary.md
tests/: __main__.py  requirements.txt  test_validator.py
tests/integration/: test_blank_data.py  test_blank_memory.py  test_complete_graph.py
tests/memory/: test_recaller.py  test_resource_db.py
tests/recall/: test_recaller.py
tests/requirements/: test_requirements.py
tests/solution_proposer/: test_reiteration_after_test_run.py  test_resources.py  test_solution_proposal.py
tests/solution_proposer/requirements/: test_requirements.py
tests/solution_proposer/resources/: test_resources.py
tests/solver/: test_iterative_proposer.py  test_simple_task.py
tests/validator/: test_code_validator.py  test_python_code_runner.py  test_solution_validation.py  test_text_validator.py  test_validator_graph.py
tool/: __main__.py  assistant.py  logs.py  models.py  parsers.py  recaller.py  requirements.py  solution_db.py  task_extractor.py  task_parser.py
tool/memory/: recaller.py  resource_db.py  solution_db.py
tool/proposer/: __init__.py  proposer.py  requirements.py  resources.py  solution.py  structure.py  tests.py
tool/requirements/: requirements.py
tool/solution_proposer/: resources.py  solution.py  tests.py
tool/solver/: draft.py  requirements.py  solution.py  solver.py  sources.py  structure.py  tests.py
tool/test_writer/: tests.py
tool/validator/: code.py  text.py  text_validator.py  validator.py  validator_graph.py
(+2 files in other folders)
